# irrlicht-cmake

./: CMakeLists.txt
examples/irr-helloworld/: CMakeLists.txt  main.cpp
